--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>2.10.1</version>
             <scope>compile</scope>
         </dependency>
+        <!-- ORMLite JDBC -->
+        <dependency>
+            <groupId>com.j256.ormlite</groupId>
+            <artifactId>ormlite-jdbc</artifactId>
+            <version>6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
